agregando otro proyecto en la seccion de proyectos

--- a/proyectos.html
+++ b/proyectos.html
@@ -108,15 +108,14 @@
 
       <div class="card tarjeta" style="width: 18rem">
         <img
-          src="img/logo-cultural.png"
+          src="img/alas uno.jpg"
           class="card-img-top"
           alt="imagen de proyecto"
         />
         <div class="card-body">
-          <h5 class="card-title text-center"><strong><em>Cultural Expression</em></strong></h5>
+          <h5 class="card-title text-center"><strong><em>Project and Task Django</em></strong></h5>
           <p class="card-text">
-            Red Social contribuyente a la cultura, arte y deporte del municipio
-            de Tamesis Antioquia.
+            Proyecto creado con Django, Html, Css para practicar lo aprendido
           </p>
         </div>
 
