--- a/herramientas.html
+++ b/herramientas.html
@@ -10,16 +10,18 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet"><link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@300;600&family=Lato:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header class="row encabezado">
+  <!-- navbar -->
+  <header class="encabezado"> 
     <div class="col-6 col-sm-12 col-md-3 col-lg-4 text-center">
-      <h1 class="col nombre">Santigo Bedoya</h1>
-    </div>
-    <div class="col-6 col-sm-12 col-md-9 col-lg-8 text-center">
-      <nav class="navbar">
-        <ul class="nav justify-content-center">
+      <h1 class="col nombre">Santiago Bedoya</h1>
+      <span class="codigo-cafe">Código & Café</span>
+    </div>  
+    <div class="text-center">
+      <nav class="navbar nav-menu">
+        <ul class="nav">
           <li class="nav-item">
             <a class="nav-enlace" href="index.html">Inicio</a>
           </li>
@@ -33,9 +35,10 @@
             <a class="nav-enlace" href="contacto.html">Contacto</a>
           </li>
         </ul>
+        <span class="menu-toggle">&#9776;</span>
       </nav>
     </div>   
-  </header>
+</header>
   <main class="fondo">
     <h2 class="slogan">
       Herramientas para desarrollar <<em><strong>Software</strong></em>>
@@ -368,5 +371,13 @@
     </p>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <!-- script del navbar bumguer -->
+  <script>
+    document.addEventListener("DOMContentLoaded", function() {
+    document.querySelector('.menu-toggle').addEventListener('click', function() {
+        document.querySelector('.nav-menu ul').classList.toggle('active');
+    });
+  });
+  </script>
 </body>
 </html>
