subiendo mejoras de proyectos

--- a/proyectos.html
+++ b/proyectos.html
@@ -73,39 +73,63 @@
       <!-- Tarjeta 1 -->
       <div class="tarjeta">
         <img
-          src="img/logo-cultural.png"
+          src="img/inicio.jpg"
           class="card-img-top"
           alt="imagen de proyecto"
         />
         <div class="card-body">
           <h5 class="card-title text-center">
-            <strong><em>Cultural Expression</em></strong>
+            <strong><em>🎨 Cultural Expression</em></strong>
           </h5>
           <p class="card-text">
-            Red Social contribuyente a la cultura, arte y deporte del municipio
-            de Tamesis Antioquia.
+          Fomentando y preservando el arte, la cultura y el deporte en el municipio 📝📢💬🎭
           </p>
         </div>
         <div class="card-body info-especifica">
-          <a href="#" class="btn-custom">Créditos</a>
-          <a href="#" class="btn-custom">Link Proyecto</a>
+          <a href="https://github.com/Sant-Beco/MejorandoExpression" class="btn-custom" target="_blank" rel="noopener noreferrer" aria-label="Abrir el repositorio en GitHub en una nueva pestaña">
+            🔗 Ver repositorio en GitHub
+          </a>
+
         </div>
       </div>
 
       <!-- Tarjeta 2 -->
       <div class="tarjeta">
         <img
-          src="img/proyecto.png"
+          src="img/img-garras.jpg"
           class="card-img-top"
           alt="imagen de proyecto"
         />
         <div class="card-body">
           <h5 class="card-title text-center">
-            <strong><em>Portafolio</em></strong>
+            <strong><em>Garras</em></strong>
           </h5>
           <p class="card-text">
-            Un portafolio web en el cual dos desarrolladores se unen para
-            publicarlo y mostrar sus proyectos realizados.
+            🌟 Tu tienda confiable para el bienestar de las mascotas y la felicidad de tus compañeros peludo
+          </p>
+        </div>
+        <div class="card-body info-especifica">
+          <a href="https://github.com/Sant-Beco/Garras-front-end" class="btn-custom" target="_blank" rel="noopener noreferrer" aria-label="Abrir el repositorio en GitHub en una nueva pestaña">
+            🔗 Ver repositorio
+          </a>
+          <a href="https://genuine-paletas-50be2f.netlify.app/" class="btn-custom">Sitio Web</a>
+
+        </div>
+      </div>
+
+      <!-- Tarjeta 3 -->
+      <div class="tarjeta">
+        <img
+          src="img/img-portafolio.jpg"
+          class="card-img-top"
+          alt="imagen de proyecto"
+        />
+        <div class="card-body">
+          <h5 class="card-title text-center">
+            <strong><em>✨ Portafolio</em></strong>
+          </h5>
+          <p class="card-text">
+            Un espacio donde comparto y exhibo sus proyectos web, destacando sus habilidades y creatividad.
           </p>
         </div>
         <div class="card-body info-especifica">
@@ -114,10 +138,10 @@
         </div>
       </div>
 
-      <!-- Tarjeta 3 -->
+      <!-- Tarjeta 4 -->
       <div class="tarjeta">
         <img
-          src="img/alas uno.jpg"
+          src="img/img-project.jpg"
           class="card-img-top"
           alt="imagen de proyecto"
         />
@@ -126,7 +150,7 @@
             <strong><em>Project and Task Django</em></strong>
           </h5>
           <p class="card-text">
-            Proyecto creado con Django, HTML y CSS para practicar lo aprendido.
+            Un proyecto desarrollado con Django, HTML y CSS ademas mejorar habilidades en desarrollo web.
           </p>
         </div>
         <div class="card-body info-especifica">
@@ -134,6 +158,69 @@
           <a href="#" class="btn-custom">Link Proyecto</a>
         </div>
       </div>
+
+       <!-- Tarjeta 5 -->
+       <div class="tarjeta">
+        <img
+          src="img/alas uno.jpg"
+          class="card-img-top"
+          alt="imagen de proyecto"
+        />
+        <div class="card-body">
+          <h5 class="card-title text-center">
+            <strong><em>Microestación Meteorologica</em></strong>
+          </h5>
+          <p class="card-text">
+            Un proyecto desarrollo web.
+          </p>
+        </div>
+        <div class="card-body info-especifica">
+          <a href="#" class="btn-custom">Créditos</a>
+          <a href="#" class="btn-custom">Link Proyecto</a>
+        </div>
+      </div>
+
+      <!-- Tarjeta 6 -->
+      <!-- <div class="tarjeta">
+        <img
+          src="img/alas uno.jpg"
+          class="card-img-top"
+          alt="imagen de proyecto"
+        />
+        <div class="card-body">
+          <h5 class="card-title text-center">
+            <strong><em>Prueba</em></strong>
+          </h5>
+          <p class="card-text">
+            Un proyecto desarrollo web.
+          </p>
+        </div>
+        <div class="card-body info-especifica">
+          <a href="#" class="btn-custom">Créditos</a>
+          <a href="#" class="btn-custom">Link Proyecto</a>
+        </div>
+      </div> -->
+
+      <!-- Tarjeta 7 -->
+      <!-- <div class="tarjeta">
+        <img
+          src="img/alas uno.jpg"
+          class="card-img-top"
+          alt="imagen de proyecto"
+        />
+        <div class="card-body">
+          <h5 class="card-title text-center">
+            <strong><em>Python</em></strong>
+          </h5>
+          <p class="card-text">
+            Un proyecto desarrollo web.
+          </p>
+        </div>
+        <div class="card-body info-especifica">
+          <a href="#" class="btn-custom">Créditos</a>
+          <a href="#" class="btn-custom">Link Proyecto</a>
+        </div>
+      </div> -->
 
       <!-- Más tarjetas ... -->
       <!-- Repite la estructura de las tarjetas según tus proyectos -->
