subiendo mejoras a projects

--- a/proyectos.html
+++ b/proyectos.html
@@ -112,7 +112,7 @@
           <a href="https://github.com/Sant-Beco/Garras-front-end" class="btn-custom" target="_blank" rel="noopener noreferrer" aria-label="Abrir el repositorio en GitHub en una nueva pestaña">
             🔗 Ver repositorio
           </a>
-          <a href="https://genuine-paletas-50be2f.netlify.app/" class="btn-custom">Sitio Web</a>
+          <a href="https://genuine-paletas-50be2f.netlify.app/" class="btn-custom" target="_blank">Sitio Web</a>
 
         </div>
       </div>
@@ -133,8 +133,10 @@
           </p>
         </div>
         <div class="card-body info-especifica">
-          <a href="#" class="btn-custom">Créditos</a>
-          <a href="#" class="btn-custom">Link Proyecto</a>
+          <a href="https://github.com/Sant-Beco/portafolio-san.git" class="btn-custom" target="_blank" rel="noopener noreferrer" aria-label="Abrir el repositorio en GitHub en una nueva pestaña">
+            🔗 Ver repositorio
+          </a>
+          <a href="https://beautiful-madeleine-97cc02.netlify.app/" class="btn-custom" target="_blank">Sitio Web</a>
         </div>
       </div>
 
@@ -154,15 +156,16 @@
           </p>
         </div>
         <div class="card-body info-especifica">
-          <a href="#" class="btn-custom">Créditos</a>
-          <a href="#" class="btn-custom">Link Proyecto</a>
+          <a href="https://github.com/Sant-Beco/projects-task-django.git" class="btn-custom" target="_blank" rel="noopener noreferrer" aria-label="Abrir el repositorio en GitHub en una nueva pestaña">
+            🔗 Ver repositorio en GitHub
+          </a>
         </div>
       </div>
 
        <!-- Tarjeta 5 -->
        <div class="tarjeta">
         <img
-          src="img/alas uno.jpg"
+          src="img/img-micro.jpg"
           class="card-img-top"
           alt="imagen de proyecto"
         />
@@ -171,35 +174,37 @@
             <strong><em>Microestación Meteorologica</em></strong>
           </h5>
           <p class="card-text">
-            Un proyecto desarrollo web.
+            Un sistema de monitoreo climático diseñado para caficultores y pequeñas fincas 🌿☕.
           </p>
         </div>
         <div class="card-body info-especifica">
-          <a href="#" class="btn-custom">Créditos</a>
-          <a href="#" class="btn-custom">Link Proyecto</a>
+          <a href="https://github.com/Sant-Beco/SitioWebEstacionMeteorologica.git" class="btn-custom" target="_blank" rel="noopener noreferrer" aria-label="Abrir el repositorio en GitHub en una nueva pestaña">
+            🔗 Ver repositorio en GitHub
+          </a>
         </div>
       </div>
 
       <!-- Tarjeta 6 -->
-      <!-- <div class="tarjeta">
+      <div class="tarjeta">
         <img
-          src="img/alas uno.jpg"
+          src="img/img-py.jpg"
           class="card-img-top"
           alt="imagen de proyecto"
         />
         <div class="card-body">
           <h5 class="card-title text-center">
-            <strong><em>Prueba</em></strong>
+            <strong><em>Python 🐍</em></strong>
           </h5>
           <p class="card-text">
-            Un proyecto desarrollo web.
+            Repositorio con ejercicios para aprender y practicar Python desde cero. Ideal para reforzar conceptos básicos.
           </p>
         </div>
         <div class="card-body info-especifica">
-          <a href="#" class="btn-custom">Créditos</a>
-          <a href="#" class="btn-custom">Link Proyecto</a>
+          <a href="https://github.com/Sant-Beco/Ejercicios-python-san.git" class="btn-custom" target="_blank" rel="noopener noreferrer" aria-label="Abrir el repositorio en GitHub en una nueva pestaña">
+            🔗 Ver repositorio en GitHub
+          </a>
         </div>
-      </div> -->
+      </div>
 
       <!-- Tarjeta 7 -->
       <!-- <div class="tarjeta">
@@ -222,8 +227,6 @@
         </div>
       </div> -->
 
-      <!-- Más tarjetas ... -->
-      <!-- Repite la estructura de las tarjetas según tus proyectos -->
     </main>
 
       
