mejora project clave

--- a/proyectos.html
+++ b/proyectos.html
@@ -207,26 +207,26 @@
       </div>
 
       <!-- Tarjeta 7 -->
-      <!-- <div class="tarjeta">
+      <div class="tarjeta">
         <img
-          src="img/alas uno.jpg"
+          src="img/img-claves.jpg"
           class="card-img-top"
           alt="imagen de proyecto"
         />
         <div class="card-body">
           <h5 class="card-title text-center">
-            <strong><em>Python</em></strong>
+            <strong><em>Creador de contraseñas 🐍</em></strong>
           </h5>
           <p class="card-text">
-            Un proyecto desarrollo web.
+            Repositorio con un proyecto en el cual puedes crear contraseñas de forma aleatoria y la logitud que deseas.
           </p>
         </div>
         <div class="card-body info-especifica">
-          <a href="#" class="btn-custom">Créditos</a>
-          <a href="#" class="btn-custom">Link Proyecto</a>
+          <a href="/" class="btn-custom" target="_blank" rel="noopener noreferrer" aria-label="Abrir el repositorio en GitHub en una nueva pestaña">
+            🔗 Ver repositorio en GitHub
+          </a>
         </div>
-      </div> -->
-
+      </div>
     </main>
 
       
