subiendo project de claves y futuro

--- a/proyectos.html
+++ b/proyectos.html
@@ -215,10 +215,32 @@
         />
         <div class="card-body">
           <h5 class="card-title text-center">
-            <strong><em>Creador de contraseñas 🐍</em></strong>
+            <strong><em>🔐 Generador de Contraseñas Seguras</em></strong>
           </h5>
           <p class="card-text">
-            Repositorio con un proyecto en el cual puedes crear contraseñas de forma aleatoria y la logitud que deseas.
+            🔸Ideal para proteger tus cuentas con combinaciones de letras, números y símbolos.
+          </p>
+        </div>
+        <div class="card-body info-especifica">
+          <a href="https://github.com/Sant-Beco/CreatePassword.git" class="btn-custom" target="_blank" rel="noopener noreferrer" aria-label="Abrir el repositorio en GitHub en una nueva pestaña">
+            🔗 Ver repositorio en GitHub
+          </a>
+        </div>
+      </div>
+
+      <!-- Tarjeta 8 -->
+      <div class="tarjeta">
+        <img
+          src="img/img-scanner.jpg"
+          class="card-img-top"
+          alt="imagen de proyecto"
+        />
+        <div class="card-body">
+          <h5 class="card-title text-center">
+            <strong><em>Futuro: Scanner </em></strong>
+          </h5>
+          <p class="card-text">
+              En proximos dias se publicara.
           </p>
         </div>
         <div class="card-body info-especifica">
