Subiendo project FastAPI Customer CRUD API

--- a/proyectos.html
+++ b/proyectos.html
@@ -231,6 +231,30 @@
       <!-- Tarjeta 8 -->
       <div class="tarjeta">
         <img
+          src="img/img-fastapi.jpg  "
+          class="card-img-top"
+          alt="imagen de proyecto"
+        />
+        <div class="card-body">
+          <h5 class="card-title text-center">
+            <strong><em>🚀 FastAPI Customer CRUD API</em></strong>
+          </h5>
+          <p class="card-text">
+            ✅ Crea, consulta, actualiza y elimina clientes
+            🛠️ Conectado a MySQL mediante SQLAlchemy
+            🧰 Validado con Pydantic
+          </p>
+        </div>
+        <div class="card-body info-especifica">
+          <a href="https://github.com/Sant-Beco/fastapi-customer-crud.git" class="btn-custom" target="_blank" rel="noopener noreferrer" aria-label="Abrir el repositorio en GitHub en una nueva pestaña">
+            🔗 Ver repositorio en GitHub
+          </a>
+        </div>
+      </div>
+
+      <!-- Tarjeta 9 -->
+      <div class="tarjeta">
+        <img
           src="img/img-scanner.jpg"
           class="card-img-top"
           alt="imagen de proyecto"
