subiendo cierre de mes

--- a/proyectos.html
+++ b/proyectos.html
@@ -273,6 +273,28 @@
           </a>
         </div>
       </div>
+
+      <!-- Tarjeta 10 -->
+      <div class="tarjeta">
+        <img
+          src="img/cierre_mes.png"
+          class="card-img-top"
+          alt="imagen de proyecto"
+        />
+        <div class="card-body">
+          <h5 class="card-title text-center">
+            <strong><em>Excel Cierre de mes </em></strong>
+          </h5>
+          <p class="card-text">
+              Excel funcional para hacer cierre de mes.
+          </p>
+        </div>
+        <div class="card-body info-especifica">
+          <a href="/" class="btn-custom" target="_blank" rel="noopener noreferrer" aria-label="Abrir el repositorio en GitHub en una nueva pestaña">
+            🔗 Ver repositorio en GitHub
+          </a>
+        </div>
+      </div>
     </main>
 
       
