--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <section class="row">
       <div class="col-12">
         <h2 class="titulo col-lg-12">
-          Hola soy tu desarrollador web, Santiago Bedoya Corrales
+          Hola soy tu desarrollador web, SanWeb
         </h2>
         <div class="row">
           <div class="col-lg-6">
