Subiendo mejoras en index inicio del portafolio

--- a/index.html
+++ b/index.html
@@ -1,133 +1,112 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home</title>
-  <meta name="description" content="Este es el portafolio de mis proyectos como desarrollador web">
-  <link rel="icon" href="img/Logo.png" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Santiago Bedoya | Desarrollador</title>
+
   <link rel="stylesheet" href="style.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@300;600&family=Lato:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
-<body>
-  <!-- navbar -->
-  <header class="encabezado"> 
-    <div class="col-6 col-sm-12 col-md-3 col-lg-4 text-center">
-      <h1 class="col nombre">San</h1>
-      <span class="codigo-cafe">Código & Café</span>
-    </div>  
-    <div class="text-center">
-      <nav class="navbar nav-menu">
-        <ul class="nav">
-          <li class="nav-item">
-            <a class="nav-enlace" href="index.html">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-enlace" href="proyectos.html">Proyectos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-enlace" href="herramientas.html">Herramientas</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-enlace" href="contacto.html">Contacto</a>
-          </li>
-        </ul>
-        <span class="menu-toggle">&#9776;</span>
-      </nav>
-    </div>   
-</header>
-  <main class="fondo">
-    <section class="row">
-      <div class="col-12">
-        <h2 class="titulo col-lg-12">
-          Hola soy tu desarrollador web, SanWeb
-        </h2>
-        <div class="row">
-          <div class="col-lg-6">
-            <p class="description">
-              Desarrollador de software con un enfoque en el desarrollo web. Me apasiona la tecnología y la creación de sitios web, especializándome en frontend, 
-              backend y gestión de bases de datos. Disfruto afrontar desafíos, optimizar soluciones y aprender continuamente nuevas tecnologías para 
-              construir experiencias digitales innovadoras y funcionales. 🚀
-            </p>
-            <div class="hobbits">
-              <p>&#x1F4D5; Disfruto la lectura, especialmente sobre autoconocimiento y desarrollo personal.</p>
-              <p>&#x1F3A7; Me encanta escuchar música en inglés mientras aprendo el idioma.</p>
-              <p>&#x1F4AA; Practico ejercicio diariamente para mantenerme activo y saludable.</p>
-              <p>&#x1F4BB; Estoy en constante aprendizaje de nuevas tecnologías y software para mejorar mis habilidades profesionales.</p>
 
-            </div>
-          </div>
-          <div class="col-12 col-lg-6 text-center">
-            <img src="img/foto.png" class="foto-perfil" alt="perfil">
-            <p class="tecnologia">
-              Software Development Analysis
-            </p>
-          </div>
-        </div>
-      </div>
-        
-    </section>
-  </main>
-  <footer class="pie-pagina bg-dark text-white py-4">
-    <div class="container">
-      <div class="row align-items-center">
-  
-        <!-- Logo -->
-        <div class="col-12 col-sm-6 col-lg-4 text-center mb-3">
-          <img src="img/fondo-footer.png" alt="Corazón ardiendo" class="img-fluid" style="max-width: 150px;">
-        </div>
-  
-        <!-- Redes Sociales -->
-        <nav class="col-12 col-sm-6 col-lg-4 text-center mb-3">
-          <ul class="list-inline social-links m-0">
-            <li class="list-inline-item mx-2">
-              <a href="#" class="enlace-footer text-white" aria-label="Facebook">
-                <i class="bi bi-facebook fs-3"></i>
-              </a>
-            </li>
-            <li class="list-inline-item mx-2">
-              <a href="#" class="enlace-footer text-white" aria-label="Instagram">
-                <i class="bi bi-instagram fs-3"></i>
-              </a>
-            </li>
-            <li class="list-inline-item mx-2">
-              <a href="#" class="enlace-footer text-white" aria-label="WhatsApp">
-                <i class="bi bi-whatsapp fs-3"></i>
-              </a>
-            </li>
-          </ul>
-        </nav>
-  
-        <!-- Información de contacto -->
-        <article class="col-12 col-lg-4 text-center mb-3">
-          <h5><strong>Equipo</strong></h5>
-          <p class="mb-1">San</p>
-          <p class="mb-0"><i class="bi bi-telephone"></i> +57 3246376012</p>
-        </article>
-      </div>
-  
-      <hr class="border-light my-3">
-  
-      <!-- Derechos Reservados -->
-      <div class="text-center text-reservado">
-        <p class="m-0"><strong>&copy; 2024 Portafolio Web Development - Todos los derechos reservados</strong></p>
-      </div>
+<body>
+
+<header class="encabezado">
+  <div>
+    <div class="nombre">Santiago Bedoya</div>
+    <div class="codigo-cafe">Código • Datos • Web</div>
+  </div>
+  <nav>
+    <ul>
+      <li class="nav-item"><a href="#sobre">Sobre mí</a></li>
+      <li class="nav-item"><a class="nav-enlace" href="proyectos.html">Proyectos</a></li>
+      <li class="nav-item"><a class="nav-enlace" href="herramientas.html">Herramientas</a></li>
+      <li class="nav-item"><a class="nav-enlace" href="contacto.html">Contacto</a></li>
+    </ul>
+  </nav>
+</header>
+
+<!-- HERO -->
+<section class="hero">
+  <div class="hilos">
+    <span></span><span></span><span></span>
+  </div>
+
+  <div class="hero-content">
+    <div class="foto-container">
+      <img src="img/foto.png" alt="Foto de Santiago">
     </div>
-  </footer>
-  
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
- 
-  <!-- script del navbar bumguer -->
- <script>
-    document.addEventListener("DOMContentLoaded", function() {
-    document.querySelector('.menu-toggle').addEventListener('click', function() {
-        document.querySelector('.nav-menu ul').classList.toggle('active');
+
+    <h1 class="nombre-animado">
+      <span style="--i:1">S</span>
+      <span style="--i:2">A</span>
+      <span style="--i:3">N</span>
+      <span style="--i:4">T</span>
+      <span style="--i:5">I</span>
+      <span style="--i:6">A</span>
+      <span style="--i:7">G</span>
+      <span style="--i:8">O</span>
+    </h1>
+
+    <p class="lema">Desarrollador orientado a soluciones reales</p>
+    <p class="intro">
+      Creo software funcional, limpio y escalable.  
+      Me enfoco en resolver problemas con lógica, datos y diseño simple.
+    </p>
+  </div>
+</section>
+
+<!-- SOBRE MI -->
+<section id="sobre" class="seccion animar">
+  <div class="contenido">
+    <h2 class="titulo">Sobre mí</h2>
+    <p class="description">
+      Soy desarrollador con interés fuerte en <strong>backend, datos y seguridad</strong>.
+      He trabajado con Django, Git, Linux y bases de datos relacionales.
+      Me adapto rápido, aprendo por proyectos y priorizo escribir código claro y mantenible.
+    </p>
+  </div>
+</section>
+
+<!-- PROYECTOS -->
+<section id="proyectos" class="seccion animar">
+  <div class="contenido">
+    <h2 class="titulo">Proyectos</h2>
+    <p class="description">
+      Aplicaciones web con autenticación, manejo de usuarios, despliegue y control de versiones.
+      Siempre enfocado en que el producto funcione y sea fácil de escalar.
+    </p>
+  </div>
+</section>
+
+<!-- CONTACTO -->
+<section id="contacto" class="seccion animar">
+  <div class="contenido">
+    <h2 class="titulo">Contacto</h2>
+    <p class="description">
+      ¿Buscas a alguien comprometido, técnico y con mentalidad de mejora continua?
+      Escríbeme y construyamos algo sólido.
+    </p>
+  </div>
+</section>
+
+<footer class="pie-pagina">
+  © 2026 — Santiago Bedoya
+</footer>
+
+<script>
+  const observer = new IntersectionObserver(entries => {
+    entries.forEach(entry => {
+      if (entry.isIntersecting) {
+        entry.target.classList.add('visible');
+      }
     });
-});
-  </script>
+  }, { threshold: 0.15 });
+
+  document.querySelectorAll('.animar').forEach(el => observer.observe(el));
+</script>
+
 </body>
 </html>
