--- a/proyectos.html
+++ b/proyectos.html
@@ -42,20 +42,12 @@
       </div>
       <div class="text-center">
         <nav class="navbar nav-menu">
-          <ul class="nav">
-            <li class="nav-item">
-              <a class="nav-enlace" href="index.html">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-enlace" href="proyectos.html">Proyectos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-enlace" href="herramientas.html">Herramientas</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-enlace" href="contacto.html">Contacto</a>
-            </li>
-          </ul>
+          <ul>
+      <li class="nav-item"><a href="index.html">Sobre mí</a></li>
+      <li class="nav-item"><a class="nav-enlace" href="proyectos.html">Proyectos</a></li>
+      <li class="nav-item"><a class="nav-enlace" href="herramientas.html">Herramientas</a></li>
+      <li class="nav-item"><a class="nav-enlace" href="contacto.html">Contacto</a></li>
+    </ul>
           <span class="menu-toggle">&#9776;</span>
         </nav>
       </div>
