Quitando mis apellidos

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <header class="encabezado">
   <div>
-    <div class="nombre">Santiago Bedoya</div>
+    <div class="nombre">Santiago</div>
     <div class="codigo-cafe">Código • Datos • Web</div>
   </div>
   <nav>
@@ -93,7 +93,7 @@
 </section>
 
 <footer class="pie-pagina">
-  © 2026 — Santiago Bedoya
+  © 2026 — Santiago
 </footer>
 
 <script>
