--- a/proyectos.html
+++ b/proyectos.html
@@ -37,7 +37,7 @@
     <!-- ========================== NAVBAR ========================== -->
     <header class="encabezado">
       <div class="col-6 col-sm-12 col-md-3 col-lg-4 text-center">
-        <h1 class="col nombre">Santiago Bedoya</h1>
+        <h1 class="col nombre">Santiago</h1>
         <span class="codigo-cafe">Código & Café</span>
       </div>
       <div class="text-center">
@@ -329,7 +329,7 @@
           <!-- Información de contacto -->
           <article class="col-12 col-lg-4 text-center mb-3">
             <h5><strong>Equipo</strong></h5>
-            <p class="mb-1">Santiago Bedoya Corrales</p>
+            <p class="mb-1">Santiago</p>
             <p class="mb-0">
               <i class="bi bi-telephone"></i> +57 3246376012
             </p>
